sumo/tests/netconvert/errors/no_output/Makefile.am
EXTRA_DIST =  errors.netconvert.exe input_edges.edg.xml input_nodes.nod.xml \
net.netconvert.exe options.netconvert output.netconvert.exe

